--- a/app/src/main/res/layout/recycle_item_square.xml
+++ b/app/src/main/res/layout/recycle_item_square.xml
@@ -29,11 +29,14 @@
 
 
         <android.support.constraint.ConstraintLayout
+                android:background="#FFffff"
                 android:layout_width="235dp"
                 android:layout_height="95dp">
 
             <TextView
                     android:text="tessssssssxt"
+                    android:textSize="15sp"
+                    android:textColor="#000000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -41,27 +44,71 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="12dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintHorizontal_bias="0.0"
-                    android:id="@+id/textView2"/>
+                    android:id="@+id/textView2"
+                    />
+
+            <TextView
+                    android:text="TextView"
+                    android:textSize="12dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView"
+                    app:layout_constraintStart_toStartOf="@+id/textView2"
+                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="8dp"/>
+
+            <ImageView
+                    android:scaleType="centerCrop"
+                    android:layout_width="33dp"
+                    android:layout_height="33dp"
+                    app:srcCompat="@drawable/text"
+                    android:id="@+id/imageView"
+                    app:layout_constraintTop_toBottomOf="@+id/textView"
+                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="8dp"/>
 
             <TextView
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/textView3"
+                    app:layout_constraintStart_toEndOf="@+id/imageView"
                     android:layout_marginStart="12dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2"
+                    app:layout_constraintTop_toTopOf="@+id/imageView"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                    app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:textSize="13sp"/>
+
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView4"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    app:layout_constraintStart_toStartOf="@+id/textView3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                    app:layout_constraintVertical_bias="0.6"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:textSize="11sp"/>
 
 
         </android.support.constraint.ConstraintLayout>
