--- a/app/src/main/res/layout/recycle_item_square.xml
+++ b/app/src/main/res/layout/recycle_item_square.xml
@@ -2,7 +2,6 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:paddingTop="15dp"
@@ -10,16 +9,12 @@
         android:layout_height="135dp">
 
 
-    <android.support.v7.widget.CardView
+    <ImageView
+            android:id="@+id/iv_background_picture"
+            android:scaleType="centerCrop"
+            android:src="@drawable/text"
             android:layout_width="150dp"
-            android:layout_height="120dp">
-
-        <ImageView
-                android:scaleType="centerCrop"
-                android:src="@drawable/text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-    </android.support.v7.widget.CardView>
+            android:layout_height="120dp"/>
 
 
     <LinearLayout
@@ -109,6 +104,21 @@
                     app:layout_constraintVertical_bias="0.6"
                     app:layout_constraintHorizontal_bias="0.0"
                     android:textSize="11sp"/>
+
+            <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    app:srcCompat="@drawable/ic_play_pause"
+                    android:id="@+id/imageView2"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintStart_toEndOf="@+id/textView2"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"/>
 
 
         </android.support.constraint.ConstraintLayout>
