--- a/app/src/main/res/layout/recycle_item_square.xml
+++ b/app/src/main/res/layout/recycle_item_square.xml
@@ -3,18 +3,18 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:paddingStart="30dp"
-        android:paddingEnd="30dp"
         android:paddingTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="135dp">
 
 
-    <ImageView
-            android:id="@+id/iv_background_picture"
-            android:scaleType="centerCrop"
-            android:src="@drawable/text"
-            android:layout_width="150dp"
-            android:layout_height="120dp"/>
+        <ImageView
+                android:id="@+id/iv_background_picture"
+                android:scaleType="centerCrop"
+                android:src="@drawable/text"
+                android:layout_width="150dp"
+                android:layout_height="120dp"/>
+
 
 
     <LinearLayout
@@ -23,105 +23,123 @@
             android:layout_height="match_parent">
 
 
-        <android.support.constraint.ConstraintLayout
-                android:background="#FFffff"
-                android:layout_width="235dp"
-                android:layout_height="95dp">
+        <android.support.v7.widget.CardView
+                android:layout_marginEnd="30dp"
+                app:cardCornerRadius="3dp"
+                app:cardElevation="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <TextView
-                    android:text="tessssssssxt"
-                    android:textSize="15sp"
-                    android:textColor="#000000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="12dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:id="@+id/textView2"
+
+            <android.support.constraint.ConstraintLayout
+                    android:paddingStart="13dp"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="10dp"
+                    android:background="#FFffff"
+                    android:layout_width="235dp"
+                    android:layout_height="95dp">
+
+                <TextView
+                        android:text="你好我的世界"
+                        android:textSize="15sp"
+                        android:textColor="#000000"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        android:id="@+id/textView2"/>
+
+                <TextView
+                        android:text="只不过是爱情"
+                        android:textSize="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView"
+                        app:layout_constraintStart_toStartOf="@+id/textView2"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintBottom_toTopOf="@+id/imageView"/>
+
+
+                <android.support.v7.widget.CardView
+                        android:id="@+id/imageView"
+                        app:cardCornerRadius="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@+id/textView"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0">
+
+
+                    <ImageView
+                    android:scaleType="centerCrop"
+                    android:layout_width="31dp"
+                    android:layout_height="31dp"
+                    app:srcCompat="@drawable/text"
                     />
 
-            <TextView
-                    android:text="TextView"
-                    android:textSize="12dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView"
-                    app:layout_constraintStart_toStartOf="@+id/textView2"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginTop="8dp"/>
+                </android.support.v7.widget.CardView>
 
-            <ImageView
-                    android:scaleType="centerCrop"
-                    android:layout_width="33dp"
-                    android:layout_height="33dp"
-                    app:srcCompat="@drawable/text"
-                    android:id="@+id/imageView"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"
-                    app:layout_constraintStart_toStartOf="@+id/textView"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginTop="8dp"/>
+                <TextView
+                        android:text="美丽的一瞬间"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3"
+                        app:layout_constraintStart_toEndOf="@+id/imageView"
+                        android:layout_marginStart="12dp"
+                        app:layout_constraintTop_toTopOf="@+id/imageView"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        android:textSize="12sp"/>
 
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView3"
-                    app:layout_constraintStart_toEndOf="@+id/imageView"
-                    android:layout_marginStart="12dp"
-                    app:layout_constraintTop_toTopOf="@+id/imageView"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                    app:layout_constraintVertical_bias="0.0"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:textSize="13sp"/>
+                <TextView
+                        android:text="不知道你在花丛的哪一角"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView4"
+                        app:layout_constraintTop_toBottomOf="@+id/textView3"
+                        app:layout_constraintStart_toStartOf="@+id/textView3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+                        app:layout_constraintVertical_bias="0.6"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        android:textSize="10sp"/>
 
-            <TextView
-                    android:text="TextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/textView3"
-                    app:layout_constraintStart_toStartOf="@+id/textView3"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
-                    app:layout_constraintVertical_bias="0.6"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:textSize="11sp"/>
-
-            <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    app:srcCompat="@drawable/ic_play_pause"
-                    android:id="@+id/imageView2"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="20dp"
-                    app:layout_constraintStart_toEndOf="@+id/textView2"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"/>
+                <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        app:srcCompat="@drawable/ic_play_pause"
+                        android:id="@+id/imageView2"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="20dp"
+                        app:layout_constraintStart_toEndOf="@+id/textView2"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintHorizontal_bias="1.0"/>
 
 
-        </android.support.constraint.ConstraintLayout>
+            </android.support.constraint.ConstraintLayout>
+
+        </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
